<resources>
    <string name="app_name">BibiCar</string>

    <string name="start_button">开启BibiCar之旅</string>
    <string name="et_input_account">请输入账号</string>
    <string name="et_input_password">输入6-16位密码</string>
    <string name="company_register">企业注册</string>
    <string name="login">登录</string>
    <string name="get_code">获取验证码</string>
    <string name="please_input_correct_phone">请输入正确手机号</string>

    <string name="login_successful">登录成功</string>

    <string name="header_reset">下拉刷新</string>
    <string name="header_pull">下拉刷新</string>
    <string name="header_pull_over">释放立即刷新</string>
    <string name="header_refreshing">正在刷新...</string>
    <string name="header_completed">刷新成功</string>

    <string name="rb_recommend">发现</string>
    <string name="rb_community">圈子</string>
    <string name="rb_message">消息</string>
    <string name="rb_mine">我的</string>

    <string name="system_message">系统消息</string>
    <string name="comment_me">评论我的</string>
    <string name="like_me">赞我的</string>
    <string name="rb_hall">大厅</string>
    <string name="rb_follow">关注</string>

    <string name="errcode_success">支付成功</string>
    <string name="errcode_cancel">取消支付</string>
    <string name="errcode_deny">支付被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">未知错误</string>
    <string name="share_to">分享至</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="car_sales_volume">销量：%1$s</string>
    <string name="time_wan_kilo">%1$s/%2$s万公里</string>
    <string name="_wan">%1$s万</string>
    <string name="tv_car_name1">丰田 埃尔法（进口）2015 3.5L 自动尊贵版</string>
    <string name="car_detail_text">这款车大气时尚，开起来很稳重大方，很有商务的严谨，又有运动的动感，适合多种需求，用车人不要在车内吸烟！保持车内整洁…</string>
    <string name="tv_car_brief">这款车大气时尚，开起来很稳重大方，很有商务的严谨，又有运动的动感，适合多种需求，请用车人不要在车内吸烟！保持车内整洁…</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="wallet_mind">温馨提示： \n1、充值为100的倍数、代表您当前可以生成几个订单 例：500元即表示您当前可以同时生成5个看车订单。 \n2、一键提现功能在您当前有订单未完成或者未终止时 不可用。</string>
    <string name="recharge_text_remind">温馨提示： \n\n如需要手动输入金额，建议为100的倍数。</string>
    <string name="search_user">搜索用户</string>
    <string name="invite_list">邀请通讯录好友</string>
    <string name="invite_weibo">邀请微博好友</string>
    <string name="invite_wechat">邀请微信好友</string>

    <string name="vr_see_car">VR看车</string>
    <string name="bibicar_vr">BiBiCar-VR</string>

    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_phone_or_name">请输入昵称和手机号</string>
    <string name="please_input_verfication_code">请输入验证码</string>
    <string name="free_get">免费获取</string>
    <string name="reset_password">重置密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_new_password">请输入新的密码</string>

    <string name="pwd_not_same">两次密码不一样,请检查输入</string>
    <string name="please_input_all_message">请输入完整信息</string>

    <string name="register_text1">请先选择您的用户类型，用户类型不同有助 于我们了解您的具体偏向并对您进行功能性 的推荐与服务。</string>

    <string name="fans_">粉丝  %1$s</string>
    <string name="follow_">关注  %1$s</string>
    <string name="fans">粉丝</string>
    <string name="private_message">私信</string>
    <string name="my_company_text">法拉利（Ferrari）是一家意大利汽车生产商，1929年由恩佐·法拉利（Enzo Ferrari）创办，主要制造一级方程式赛车、赛车及高性能的豪华体验的高档车</string>

    <string name="have_no_bio">您尚未编辑个性签名</string>
    <string name="user_have_no_bio">该用户尚未编辑个性签名</string>

    <string name="copy_right">Copyright ️2016 Bibi Automotive. All Rights Reserved</string>

    <string name="load_store_failed">跳转市场失败</string>
    <string name="connect_to_buy">联系车主</string>
    <string name="connect_phone_number">400-113-8778</string>
    <string name="call_phone">拨打</string>
    <string name="sure">确定</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="More_popup_SecondBtnTitle">edit</string>
    <string name="More_popup_FirstBtnTitle">delete</string>
    <string name="post_new_car">上传新车</string>
    <string name="post_second_hanle_car">上传二手车</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="modify_love_car">修改</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="save_to_album">保存到相册</string>
    <string name="error_gif">错误gif</string>

    <string name="car_color_0">未知</string>
    <string name="car_color_1">黑色</string>
    <string name="car_color_2">红色</string>
    <string name="car_color_3">深灰色</string>
    <string name="car_color_4">粉红色</string>
    <string name="car_color_5">银灰色</string>
    <string name="car_color_6">紫色</string>
    <string name="car_color_7">白色</string>
    <string name="car_color_8">蓝色</string>
    <string name="car_color_9">香槟色</string>
    <string name="car_color_10">绿色</string>
    <string name="car_color_11">黄色</string>
    <string name="car_color_12">咖啡色</string>
    <string name="car_color_13">橙色</string>
    <string name="car_color_14">多彩色</string>
    <string name="car_center">车市</string>
    <string name="no_limit">不限</string>
    <string name="rb_fan">粉丝</string>

    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="next_step">下一步</string>
    <string name="make_sure">确认</string>
    <string name="done">完成</string>
    <string name="undo">还原</string>

    <string name="basic_message">基本信息</string>
    <string name="car_detail">详细配置</string>
    <string name="message_detail">信息越完善，排名越靠前，售出几率越高</string>
    <string name="car_model">车型</string>
    <string name="not_seleted">未选择  ></string>
    <string name="not_write">未填写</string>
    <string name="not_write_choose">未填写(选填)</string>
    
    <string name="history_offer">历史报价</string>
    <string name="generate_offering_list">生成报价单</string>
    <string name="history_offer_title">历史报价单</string>
    <string name="show_report">报价单</string>
    <string name="report_welcome">很高兴您选择BiBiCar,我们一直奉行在全国范围内帮客户寻找最具价格竞争力的全品牌车型。目前已代理多家品牌授权经销商，并与4S之间建立紧密合作关系，可在全国范围内为您寻车、调车。</string>
    <string name="report_promise">我司承诺所售车辆均与4S店售车一致，享有国家三包政策，全国保修。</string>
    <string name="report_remark">1、购置税由国家税务机关统一收取，所列费用为预估费用。\n2、客户若在限购城市购车上牌，自行提供指标。如若需要代为竞拍指标，本公司实行实报实销制度，费用由客户承担。</string>
    <string name="limit_day">(有效期3天)</string>
    <string name="input_consultant_name">请输入销售顾问的姓名</string>
    <string name="input_consultant_tel">请输入销售顾问的联系电话</string>
    <string name="input_guide_price">请输入指导价</string>
    <string name="input_promise">请输入承诺</string>
    <string name="input_total_price">请输入合计总价</string>
    <string name="input_purchase_tax">请输入购置税</string>
    <string name="set_report_time">请设置报价时间</string>
    <string name="input_car_type">请输入车辆型号</string>
    <string name="input_car_color">请输入颜色</string>
    <string name="input_car_info">请输入车辆简介</string>
    <string name="input_insurance">请输入保险费</string>
    <string name="input_premium">请输入上牌费</string>
    <string name="input_other">请输入其他费用</string>
    <string name="input_receive_account">请输入收款账号</string>
    <string name="input_account_name">请输入开户名</string>
    <string name="input_account_bank">请输入开户行</string>
    <string name="copy_link_success">链接复制成功~</string>
    <string name="choose_write">选填</string>
    <string name="promise_text">尊敬的客户:\n感谢您对%1$s汽车和我司的信赖，现就您咨询的%2$s购车费用详细报价如下：</string>

    <string name="only_a_photo">每个角度只能上传一张照片~</string>

</resources>
