<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wiserz.pbibi.activity.MainActivity">

    <!--FrameLayout-->
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--底部：RadioGroup-->
    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/tab_background_pic"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_recommend"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_recommend_selector"
            android:text="@string/rb_recommend"/>

        <RadioButton
            android:id="@+id/rb_community"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_community_selector"
            android:text="@string/rb_community"/>

        <RadioButton
            android:id="@+id/rb_car_center"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/car_center"/>

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_message_selector"
            android:text="@string/rb_message"/>

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_my_selector"
            android:text="@string/rb_mine"/>

    </RadioGroup>

</LinearLayout>
