<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp">

        <View
            android:id="@+id/centerView"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvBasicMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/centerView"
            android:text="@string/basic_message"
            android:textColor="@color/main_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/centerView"
            android:text="@string/car_detail"
            android:textColor="@color/second_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/tvBasicMsg"
            android:layout_alignRight="@id/tvBasicMsg"
            android:layout_below="@id/tvBasicMsg"
            android:layout_marginTop="10dp"
            android:background="@color/main_text_color" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@id/tvDetailMsg"
            android:layout_alignRight="@id/tvDetailMsg"
            android:layout_below="@id/tvDetailMsg"
            android:layout_marginTop="10dp"
            android:background="@color/main_text_color"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:id="@+id/topLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/rlWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLine2"
        android:background="#10ff5d5d"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/laba"
            android:layout_centerHorizontal="true"
            android:drawablePadding="15dp"
            android:gravity="center"
            android:text="@string/message_detail"
            android:textColor="@color/warning_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvCloseWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="X"
            android:textColor="@color/warning_color"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_post_second_car"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="发布车辆"
        android:textColor="@drawable/btn_text_background_selector"
        android:textSize="16sp" />

    <com.wiserz.pbibi.view.CustomViewPager
        android:id="@+id/customViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_post_second_car"
        android:layout_below="@id/rlWarning"/>

    <RelativeLayout
        android:id="@+id/rlSelectDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:alpha="0.75"/>


        <LinearLayout
            android:id="@+id/llBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:background="@color/pure_white_color"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_select_date_btn"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/pure_white_color"
                    android:textSize="15sp"/>


                <TextView
                    android:id="@+id/tvSure"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_select_date_btn"
                    android:gravity="center"
                    android:layout_marginLeft="15dp"
                    android:text="@string/sure"
                    android:textColor="@color/pure_white_color"
                    android:textSize="15sp"/>

        </LinearLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_above="@id/llBtns"
            android:background="@color/pure_white_color"></DatePicker>
    </RelativeLayout>
</RelativeLayout>