<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="15dp">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/white_back" />

        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/more_photos"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:drawablePadding="10dp"
            android:text="Camera" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/selectPhotoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomView"
        android:visibility="gone"
        android:background="@android:color/black">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlTakePhoto">

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:visibility="invisible"
                android:text="@string/sure"/>

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="25sp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:layout_marginRight="30dp"
                android:text="@string/next_step"/>

        </RelativeLayout>

        <View
            android:id="@+id/pointView"
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/point_bg"/>



        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/pointView"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/pure_white_color"
                android:text="@string/camera"/>
            <TextView
                android:id="@+id/tvCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/main_color"
                android:text="@string/album"/>

            <TextView
                android:id="@+id/tvRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="15dp"
                android:visibility="invisible"
                android:textColor="@color/pure_white_color"
                android:text="@string/album"/>
        </LinearLayout>
        </RelativeLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topView"
        android:layout_above="@id/selectPhotoView"
        android:background="@android:color/black"
        android:gravity="center"
        android:horizontalSpacing="3dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="3dp"></GridView>

    <View
        android:id="@+id/alphaView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topView"
        android:alpha="0.5"
        android:background="@android:color/black"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_below="@id/topView"
        android:alpha="0.8"
        android:background="@android:color/black"
        android:listSelector="@android:color/white"
        android:scrollbars="none"
        android:visibility="gone"></ListView>

</RelativeLayout>